--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -11,6 +11,7 @@
     <link href="TerritoryWeb.Client.styles.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAnFyc29RtN2hda5KjuK4queRlRtN3HIYE&v=3"></script>
 </head>
 
 <body>
@@ -24,6 +25,7 @@
     <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <script src="_content/BlazorGoogleMaps/objectManager.js"></script>
 </body>
 
 </html>
